--- a/index.html
+++ b/index.html
@@ -90,28 +90,15 @@
                     <div class="col-lg-9"></div><!--end col-->
                 </div><!--end row-->
             </div><!--end container-->
+            <div class="position-relative">
+                <div class="shape overflow-hidden text-color-white">
+                    <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 48H1437.5H2880V0H2160C1442.5 52 720 0 720 0H0V48Z" fill="currentColor"></path>
+                    </svg>
+                </div>
+            </div>
         </section><!--end section-->
         <!-- Hero End -->
-
-        <!-- Brand Highlight -->
-        <section class="section brand-highlight">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-6 col-md-8 col-10">
-                        <div class="features-absolute">
-                            <div class="card brand-card border-0 text-center">
-                                <div class="card-body p-0 content">
-                                    <div class="brand-mark">
-                                        <img src="assets/images/لوقو سرمد2.jpg" class="brand-logo" alt="شعار سرمد">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!--end col-->
-                </div><!--end row-->
-            </div><!--end container-->
-        </section>
-        <!-- Brand Highlight End -->
 
         <!-- About Start -->
         <section class="section bg-light" id="about">
@@ -164,7 +151,6 @@
                                     </div>
                                     <div class="card-body content">
                                         <h5><a href="javascript:void(0)" class="card-title title text-dark">إعادة تصميم سلسلة التبريد القطبية</a></h5>
-                                        <p class="text-muted mt-3 mb-0">تستعرض الخطة كيفية موازنة التخزين المبرد مع الطلب الموسمي عبر لوحات تحكم فورية تبقي الجودة في ذروتها.</p>
                                         <div class="d-flex justify-content-between align-items-center mt-3">
                                             <span class="text-muted small"><i class="uil uil-calendar-alt me-1"></i>الربع الأول 2025</span>
                                             <a href="javascript:void(0)" class="text-muted readmore">قراءة القصة <i class="uil uil-angle-left-b align-middle"></i></a>
@@ -185,7 +171,6 @@
                                     </div>
                                     <div class="card-body content">
                                         <h5><a href="javascript:void(0)" class="card-title title text-dark">شبكة محاور حضرية مصغّرة</a></h5>
-                                        <p class="text-muted mt-3 mb-0">يوضح المخطط تشغيل محاور حضرية مصغّرة تعتمد تحليلات دقيقة لتقليل المسافات وتحسين تسليم الطلبات في اليوم نفسه.</p>
                                         <div class="d-flex justify-content-between align-items-center mt-3">
                                             <span class="text-muted small"><i class="uil uil-calendar-alt me-1"></i>الربع الثالث 2024</span>
                                             <a href="javascript:void(0)" class="text-muted readmore">قراءة القصة <i class="uil uil-angle-left-b align-middle"></i></a>
@@ -206,7 +191,6 @@
                                     </div>
                                     <div class="card-body content">
                                         <h5><a href="javascript:void(0)" class="card-title title text-dark">تحديث الأسطول الهجين</a></h5>
-                                        <p class="text-muted mt-3 mb-0">يركز المشروع على إعادة تجهيز أساطيل مختلطة باستخدام صيانة تنبؤية وجداول مرنة تحافظ على الاستدامة التشغيلية.</p>
                                         <div class="d-flex justify-content-between align-items-center mt-3">
                                             <span class="text-muted small"><i class="uil uil-calendar-alt me-1"></i>الربع الرابع 2024</span>
                                             <a href="javascript:void(0)" class="text-muted readmore">قراءة القصة <i class="uil uil-angle-left-b align-middle"></i></a>
@@ -227,7 +211,6 @@
                                     </div>
                                     <div class="card-body content">
                                         <h5><a href="javascript:void(0)" class="card-title title text-dark">تحسين الممرات القطبية</a></h5>
-                                        <p class="text-muted mt-3 mb-0">يصف السيناريو تنظيم مسارات قطبية باستخدام حساسات بيئية لضمان تدفق آمن وحماية الشحنات الحساسة طوال الرحلة.</p>
                                         <div class="d-flex justify-content-between align-items-center mt-3">
                                             <span class="text-muted small"><i class="uil uil-calendar-alt me-1"></i>الربع الرابع 2023</span>
                                             <a href="javascript:void(0)" class="text-muted readmore">قراءة القصة <i class="uil uil-angle-left-b align-middle"></i></a>
@@ -248,7 +231,6 @@
                                     </div>
                                     <div class="card-body content">
                                         <h5><a href="javascript:void(0)" class="card-title title text-dark">برج تحكّم متكيف</a></h5>
-                                        <p class="text-muted mt-3 mb-0">يقدم التصميم نموذج برج تحكم متكامل يوحّد تدفق البيانات، ويراقب الأحداث، ويمنح الفرق قرارات أسرع بثقة عالية.</p>
                                         <div class="d-flex justify-content-between align-items-center mt-3">
                                             <span class="text-muted small"><i class="uil uil-calendar-alt me-1"></i>الربع الثاني 2024</span>
                                             <a href="javascript:void(0)" class="text-muted readmore">قراءة القصة <i class="uil uil-angle-left-b align-middle"></i></a>
@@ -269,7 +251,6 @@
                                     </div>
                                     <div class="card-body content">
                                         <h5><a href="javascript:void(0)" class="card-title title text-dark">شراكة الممر الأخضر</a></h5>
-                                        <p class="text-muted mt-3 mb-0">يعرض المشروع شراكة ممرات خضراء تعتمد مصادر طاقة بديلة وتُبقي مستويات الخدمة ثابتة مع تقليل الانبعاثات.</p>
                                         <div class="d-flex justify-content-between align-items-center mt-3">
                                             <span class="text-muted small"><i class="uil uil-calendar-alt me-1"></i>الربع الأول 2024</span>
                                             <a href="javascript:void(0)" class="text-muted readmore">قراءة القصة <i class="uil uil-angle-left-b align-middle"></i></a>
