fix home page and project pages design, add first two projects

--- a/index.html
+++ b/index.html
@@ -144,123 +144,47 @@
                     <div class="col-lg-12 mt-4">
                         <div class="tiny-three-item projects-carousel" id="projectsCarousel">
                             <div class="tiny-slide">
-                                <div class="card blog blog-primary rounded border-0 shadow-sm">
-                                    <div class="position-relative">
-                                        <img src="assets/images/pexels-atbo-66986-245208.jpg" class="card-img-top rounded-top" alt="عمليات منشأة بحرارة مضبوطة">
-                                        <div class="overlay rounded-top"></div>
-                                    </div>
-                                    <div class="card-body content">
-                                        <h5><a href="javascript:void(0)" class="card-title title text-dark">إعادة تصميم سلسلة التبريد القطبية</a></h5>
-                                        <div class="d-flex justify-content-between align-items-center mt-3">
-                                            <span class="text-muted small"><i class="uil uil-calendar-alt me-1"></i>الربع الأول 2025</span>
-                                            <a href="javascript:void(0)" class="text-muted readmore">قراءة القصة <i class="uil uil-angle-left-b align-middle"></i></a>
+                                <a href="project-asternis.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p1.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع أسترنيس">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">Asternis | أسترنيس</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>ريم آل ابو عليان</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @reem.albu.olayan</small>
+                                            <small class="date"><i class="uil uil-external-link-alt"></i> عرض التفاصيل</small>
                                         </div>
                                     </div>
-                                    <div class="author">
-                                        <small class="user d-block"><i class="uil uil-map-marker"></i> مونتريال، كندا</small>
-                                        <small class="date"><i class="uil uil-clock"></i> تنفيذ خلال 12 أسبوعًا</small>
-                                    </div>
-                                </div>
+                                </a>
                             </div>
 
                             <div class="tiny-slide">
-                                <div class="card blog blog-primary rounded border-0 shadow-sm">
-                                    <div class="position-relative">
-                                        <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="card-img-top rounded-top" alt="محور لوجستي حضري مصغّر">
-                                        <div class="overlay rounded-top"></div>
-                                    </div>
-                                    <div class="card-body content">
-                                        <h5><a href="javascript:void(0)" class="card-title title text-dark">شبكة محاور حضرية مصغّرة</a></h5>
-                                        <div class="d-flex justify-content-between align-items-center mt-3">
-                                            <span class="text-muted small"><i class="uil uil-calendar-alt me-1"></i>الربع الثالث 2024</span>
-                                            <a href="javascript:void(0)" class="text-muted readmore">قراءة القصة <i class="uil uil-angle-left-b align-middle"></i></a>
+                                <a href="project-glam-reborn.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p2.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع Glam Reborn">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">Glam Reborn</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>هتون بندر اليزيدي</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @byhotoon</small>
+                                            <small class="date"><i class="uil uil-phone"></i> +966503520084</small>
                                         </div>
                                     </div>
-                                    <div class="author">
-                                        <small class="user d-block"><i class="uil uil-map-marker"></i> روتردام، هولندا</small>
-                                        <small class="date"><i class="uil uil-clock"></i> تجربة لمدة 6 أشهر</small>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="tiny-slide">
-                                <div class="card blog blog-primary rounded border-0 shadow-sm">
-                                    <div class="position-relative">
-                                        <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="card-img-top rounded-top" alt="أسطول هجين في ساحة لوجستية">
-                                        <div class="overlay rounded-top"></div>
-                                    </div>
-                                    <div class="card-body content">
-                                        <h5><a href="javascript:void(0)" class="card-title title text-dark">تحديث الأسطول الهجين</a></h5>
-                                        <div class="d-flex justify-content-between align-items-center mt-3">
-                                            <span class="text-muted small"><i class="uil uil-calendar-alt me-1"></i>الربع الرابع 2024</span>
-                                            <a href="javascript:void(0)" class="text-muted readmore">قراءة القصة <i class="uil uil-angle-left-b align-middle"></i></a>
-                                        </div>
-                                    </div>
-                                    <div class="author">
-                                        <small class="user d-block"><i class="uil uil-map-marker"></i> دبي، الإمارات</small>
-                                        <small class="date"><i class="uil uil-clock"></i> برنامج لمدة 9 أشهر</small>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="tiny-slide">
-                                <div class="card blog blog-primary rounded border-0 shadow-sm">
-                                    <div class="position-relative">
-                                        <img src="assets/images/pexels-atbo-66986-245208.jpg" class="card-img-top rounded-top" alt="مخزون مجمّد موسمي داخل منشأة لوجستية">
-                                        <div class="overlay rounded-top"></div>
-                                    </div>
-                                    <div class="card-body content">
-                                        <h5><a href="javascript:void(0)" class="card-title title text-dark">تحسين الممرات القطبية</a></h5>
-                                        <div class="d-flex justify-content-between align-items-center mt-3">
-                                            <span class="text-muted small"><i class="uil uil-calendar-alt me-1"></i>الربع الرابع 2023</span>
-                                            <a href="javascript:void(0)" class="text-muted readmore">قراءة القصة <i class="uil uil-angle-left-b align-middle"></i></a>
-                                        </div>
-                                    </div>
-                                    <div class="author">
-                                        <small class="user d-block"><i class="uil uil-map-marker"></i> تورونتو، كندا</small>
-                                        <small class="date"><i class="uil uil-clock"></i> تنفيذ خلال 8 أسابيع</small>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="tiny-slide">
-                                <div class="card blog blog-primary rounded border-0 shadow-sm">
-                                    <div class="position-relative">
-                                        <img src="assets/images/pexels-fotoaibe-1643383.jpg" class="card-img-top rounded-top" alt="مركز قيادة لوجستي">
-                                        <div class="overlay rounded-top"></div>
-                                    </div>
-                                    <div class="card-body content">
-                                        <h5><a href="javascript:void(0)" class="card-title title text-dark">برج تحكّم متكيف</a></h5>
-                                        <div class="d-flex justify-content-between align-items-center mt-3">
-                                            <span class="text-muted small"><i class="uil uil-calendar-alt me-1"></i>الربع الثاني 2024</span>
-                                            <a href="javascript:void(0)" class="text-muted readmore">قراءة القصة <i class="uil uil-angle-left-b align-middle"></i></a>
-                                        </div>
-                                    </div>
-                                    <div class="author">
-                                        <small class="user d-block"><i class="uil uil-map-marker"></i> سنغافورة</small>
-                                        <small class="date"><i class="uil uil-clock"></i> بناء خلال 5 أشهر</small>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="tiny-slide">
-                                <div class="card blog blog-primary rounded border-0 shadow-sm">
-                                    <div class="position-relative">
-                                        <img src="assets/images/pexels-fotios-photos-1090638.jpg" class="card-img-top rounded-top" alt="مركبات شحن هجينة">
-                                        <div class="overlay rounded-top"></div>
-                                    </div>
-                                    <div class="card-body content">
-                                        <h5><a href="javascript:void(0)" class="card-title title text-dark">شراكة الممر الأخضر</a></h5>
-                                        <div class="d-flex justify-content-between align-items-center mt-3">
-                                            <span class="text-muted small"><i class="uil uil-calendar-alt me-1"></i>الربع الأول 2024</span>
-                                            <a href="javascript:void(0)" class="text-muted readmore">قراءة القصة <i class="uil uil-angle-left-b align-middle"></i></a>
-                                        </div>
-                                    </div>
-                                    <div class="author">
-                                        <small class="user d-block"><i class="uil uil-map-marker"></i> أوسلو، النرويج</small>
-                                        <small class="date"><i class="uil uil-clock"></i> برنامج لمدة 14 أسبوعًا</small>
-                                    </div>
-                                </div>
+                                </a>
                             </div>
                         </div>
                     </div><!--end col-->
