add more 8 projects, fix the footer design, add copyright

--- a/index.html
+++ b/index.html
@@ -186,6 +186,182 @@
                                     </div>
                                 </a>
                             </div>
+
+                            <div class="tiny-slide">
+                                <a href="project-dn-sh.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p3.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع DN SH">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">DN SH</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>دانة العميريني / سميه هادي</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @dnshbird1</small>
+                                            <small class="date"><i class="uil uil-external-link-alt"></i> عرض التفاصيل</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="tiny-slide">
+                                <a href="project-the-line.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p4.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع the line">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">the line</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>زبيده فهمي</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @zubaidah_fahmie</small>
+                                            <small class="date"><i class="uil uil-external-link-alt"></i> عرض التفاصيل</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="tiny-slide">
+                                <a href="project-terhab.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p5.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع ترحاب">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">ترحاب</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>رغد أبوقيان / ريما الشريف</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @by.raghadq · @_rasfashion1</small>
+                                            <small class="date"><i class="uil uil-phone"></i> +966583007623 · +966560653204</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="tiny-slide">
+                                <a href="project-alpha.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p6.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع الفا ALPHA">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">الفا ALPHA</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>أمجاد الصبيحي / نهى الزهراني</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @alpha_brand_an</small>
+                                            <small class="date"><i class="uil uil-video"></i> TikTok: alpha.brand17</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="tiny-slide">
+                                <a href="project-wesal.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p7.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع وِصال">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">وِصال</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>غاليه البريه / ريوف المفرح</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @gh1.designer · @ry.fashion.l</small>
+                                            <small class="date"><i class="uil uil-external-link-alt"></i> عرض التفاصيل</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="tiny-slide">
+                                <a href="project-palourde.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p8.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع palourde">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">palourde</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>هيا السبيعي / ليلى الاسمري</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @palourdefashion</small>
+                                            <small class="date"><i class="uil uil-external-link-alt"></i> عرض التفاصيل</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="tiny-slide">
+                                <a href="project-alusul.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p9.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع الأصول">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">الأصول</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>مزون سعيد / فرح نوفل</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-envelope"></i> Muzun.saeed@gmail.com · Fara7na003@icloud.com</small>
+                                            <small class="date"><i class="uil uil-phone"></i> 0557992844 · 0566213123</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="tiny-slide">
+                                <a href="project-neo-najd.html" class="project-card-link">
+                                    <div class="card blog blog-primary project-card rounded border-0 shadow-sm">
+                                        <div class="position-relative">
+                                            <img src="assets/images/p10.jpg" class="card-img-top rounded-top project-card-logo" alt="شعار مشروع Neo najd">
+                                            <div class="overlay rounded-top"></div>
+                                        </div>
+                                        <div class="card-body content">
+                                            <h5 class="card-title title text-dark mb-0">Neo najd</h5>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <span class="text-muted small"><i class="uil uil-user me-1"></i>ريماس الحافي / ريما الزهراني / لمى النويمي</span>
+                                                <span class="text-muted readmore">الق نظرة <i class="uil uil-angle-left-b align-middle"></i></span>
+                                            </div>
+                                        </div>
+                                        <div class="author">
+                                            <small class="user d-block"><i class="uil uil-instagram"></i> @_neonajd</small>
+                                            <small class="date"><i class="uil uil-phone"></i> 0501427785 · 0552112080 · 0506157420</small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div><!--end col-->
                 </div><!--end row-->
@@ -208,18 +384,15 @@
                         </div><!--end col-->
 
                         <div class="col-lg-6 col-md-6 col-sm-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
-                            <ul class="list-unstyled footer-list terms-service mb-0 d-flex justify-content-center gap-3 flex-wrap">
-                                <li class="mb-0"><a href="javascript:void(0)" class="text-foot">الخصوصية</a></li>
-                                <li class="mb-0"><a href="javascript:void(0)" class="text-foot">الشروط</a></li>
-                                <li class="mb-0"><a href="javascript:void(0)" class="text-foot">الأسئلة الشائعة</a></li>
-                                <li class="mb-0"><a href="javascript:void(0)" class="text-foot">تواصل</a></li>
-                            </ul>
+                            
                         </div><!--end col-->
 
                         <div class="col-lg-3 col-md-4 col-sm-3 mt-4 mt-sm-0 pt-2 pt-sm-0">
                             <div class="text-sm-start text-center">
-                                <p class="mb-0 text-foot">© <script>document.write(new Date().getFullYear())</script> <a href="http://www.shreethemes.in/" target="_blank" class="text-reset">شري ثيمز</a>. جميع الحقوق محفوظة.</p>
-                            </div>
+                                <p class="mb-0 text-foot"><script>document.write(new Date().getFullYear())</script> ©</p>
+                                <span style="color: #80886D;">Designed by: <a href="https://thana-abdulhalim.netlify.app" target="_blank" class="text-reset">THANA ABDELHALIM</a></span>
+                            </div>  
+
                         </div><!--end col-->
                     </div><!--end row-->
                 </div><!--end container-->
