fix the title and the about content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>سرمد - حلول سلاسل الإمداد واللوجستيات</title>
+        <title>سرمد - تصميم</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="قالب صفحة هبوط احترافي يعتمد Bootstrap للحلول الرقمية واللوجستية.">
         <meta name="keywords" content="منصة، حلول، لوجستيات، برمجيات، أعمال، شركة">
@@ -113,7 +113,7 @@
                     <div class="col-lg-7 col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
                         <div class="section-title ms-lg-4 text-md-end text-center">
                             <h6 class="text-muted text-uppercase">عن سرمد</h6>
-                            <h4 class="title mb-4">حلول لوجستية ناشئة للعلامات الطموحة</h4>
+                            <h4 class="title mb-4">مشاريع تصميم مميزة</h4>
                             <p class="text-muted">نُصمم منظومات لوجستية مرنة تمزج بين حدس البيانات والبصيرة الإنسانية والتصميم الهادف. من أول نموذج تجريبي وحتى التوسع العالمي، نحافظ على وتيرة أعمالكم ونصنع تجارب لا تُنسى.</p>
                             <ul class="list-unstyled text-muted pe-lg-4">
                                 <li class="mb-2"><span class="text-primary h5 me-2"><i class="uil uil-check-circle align-middle"></i></span>تخطيط متكامل من التوريد وحتى آخر نقطة تسليم.</li>
