--- a/project-asternis.html
+++ b/project-asternis.html
@@ -174,7 +174,7 @@
                     <div class="col-lg-8 col-md-10">
                         <div class="title-heading text-center">
                             <h4 class="mb-4">معلومات المصممة</h4>
-                            <p class="text-muted">جميع قنوات التواصل الخاصة بالمصممة ريم آل ابو عليان.</p>
+                            <p class="text-muted">تواصل مع فريق أسترنيس للحصول على مزيد من التفاصيل.</p>
                             <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
                                 <div class="icon">
                                     <i class="uil uil-user-circle fea icon-m-md text-dark me-3"></i>
