--- a/project-details.html
+++ b/project-details.html
@@ -236,7 +236,7 @@
                     <div class="col-lg-8 col-md-10">
                         <div class="title-heading text-center">
                             <h4 class="mb-4">معلومات التواصل</h4>
-                            <p class="text-muted">نحن هنا لمساعدتك. تواصل معنا عبر أي من القنوات التالية.</p>
+                            <p class="text-muted">تواصل مع فريق سرمد للحصول على مزيد من التفاصيل.</p>
                             <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
                                 <div class="icon">
                                     <i data-feather="mail" class="fea icon-m-md text-dark me-3"></i>
