--- a/project-glam-reborn.html
+++ b/project-glam-reborn.html
@@ -157,7 +157,7 @@
                     <div class="col-lg-8 col-md-10">
                         <div class="title-heading text-center">
                             <h4 class="mb-4">معلومات المصممة</h4>
-                            <p class="text-muted">قنوات التواصل الخاصة بالمصممة هتون بندر اليزيدي.</p>
+                            <p class="text-muted">تواصل مع فريق Glam Reborn للحصول على مزيد من التفاصيل.</p>
                             <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
                                 <div class="icon">
                                     <i class="uil uil-user-circle fea icon-m-md text-dark me-3"></i>
