--- a/project-palourde.html
+++ b/project-palourde.html
@@ -150,7 +150,7 @@
                     <div class="col-lg-8 col-md-10">
                         <div class="title-heading text-center">
                             <h4 class="mb-4">معلومات المصممتين</h4>
-                            <p class="text-muted">للتنسيق أو الاستفسار حول المجموعة يرجى التواصل عبر القنوات التالية.</p>
+                            <p class="text-muted">تواصل مع فريق Palourde للحصول على مزيد من التفاصيل.</p>
                             <div class="d-flex contact-detail align-items-center mt-4 justify-content-center">
                                 <div class="icon">
                                     <i class="uil uil-user-circle fea icon-m-md text-dark me-3"></i>
